--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,14 +15,14 @@ jobs:
     - uses: actions/checkout@v2
 
     # Install dependencies
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
-
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
+    # - name: Set up Python 3.7
+    #   uses: actions/setup-python@v1
+    #   with:
+    #     python-version: 3.7
+    #
+    # - name: Install dependencies
+    #   run: |
+    #     pip install -r requirements.txt
     # Build the book
     - name: Build the book
       run: |
