--- a/_toc.yml
+++ b/_toc.yml
@@ -8,4 +8,5 @@
   sections:
     - file: summary/11-bio-net-dl
     - file: summary/31-grn-ssu
-    - file: summary/51-grgnn
+    - file: summary/53-grn-denoise
+    - file: summary/71-grgnn
